--- a/test/unit.html
+++ b/test/unit.html
@@ -8,8 +8,21 @@
 	</head>
 	<body>
 		<div id="qunit"></div>
+		<script>
+			// We need to remove the default implementation of these methods
+			// in order to test the methods provided in augmentjs. This is to
+			// simulate environments where these methods do not exist.
+				if(Object.prototype.create){
+					Object.prototype.create = undefined;
+				}
+
+				if(Array.prototype.forEach){
+					Array.prototype.forEach = undefined;
+				}
+		</script>
 		<script type="text/javascript" src="../dist/augment.js"></script>
 		<script>
+		
 			test('String methods', function(){
 				var testStr = "   foo ";
 				equal(testStr.join("bar"), "   foo bar");
@@ -21,9 +34,11 @@
 			test('Array methods', function(){
 				var testArr = [1,2,3];
 				var testResult = [];
-				testArr.each(function(num){
+
+				testArr.forEach(function(num){
 					testResult.push(num);
 				}, this);
+				
 				equal(testResult.length, 3);
 				equal(testResult[0], 1);
 				equal(testResult[1], 2);
@@ -35,6 +50,17 @@
 				var add5 = add.curry(5);
 				equal(add5(1), 6);
 				equal(add5(10), 15);
+			});
+
+			test('Object methods', function(){
+				var testObj = {name: "Foo", type: "foo"};
+				var newTestObj = testObj.beget();
+				var otherObj = Object.beget({name: "Testy", type: "other"});
+				
+				equal(newTestObj.name, "Foo");
+				equal(newTestObj.type, "foo");
+				equal(otherObj.name, "Testy");
+				equal(otherObj.type, "other");
 			});
 
 		</script>
