--- a/test/unit.html
+++ b/test/unit.html
@@ -19,10 +19,14 @@
 				if(Array.prototype.forEach){
 					Array.prototype.forEach = undefined;
 				}
+
+				if(Array.prototype.map){
+					Array.prototype.map = undefined;
+				}
 		</script>
 		<script type="text/javascript" src="../dist/augment.js"></script>
 		<script>
-		
+
 			test('String methods', function(){
 				var testStr = "   foo ";
 				equal(testStr.join("bar"), "   foo bar");
@@ -38,11 +42,21 @@
 				testArr.forEach(function(num){
 					testResult.push(num);
 				}, this);
-				
+
 				equal(testResult.length, 3);
 				equal(testResult[0], 1);
 				equal(testResult[1], 2);
 				equal(testResult[2], 3);
+
+				var newArr = testArr.map(function(num){
+					return num + 1;
+				}, this);
+
+				notEqual(testArr.join(', '), newArr.join(', '));
+				equal(newArr.length, 3);
+				equal(newArr[0], 2);
+				equal(newArr[1], 3);
+				equal(newArr[2], 4);
 			});
 
 			test('Function methods', function(){
@@ -65,7 +79,7 @@
 				var testObj = {name: "Foo", type: "foo"};
 				var newTestObj = testObj.beget();
 				var otherObj = Object.beget({name: "Testy", type: "other"});
-				
+
 				equal(newTestObj.name, "Foo", "Created new Object successfully.");
 				equal(newTestObj.type, "foo", "Created new Object successfully.");
 				equal(otherObj.name, "Testy", "Created new Object successfully.");
@@ -95,7 +109,7 @@
                 // Object.translate
 				var schema = {foo: "name", bar: "type"};
 				var obj = {foo: "Homer", bar: "character"};
-				var transObj = obj.translate(schema);				
+				var transObj = obj.translate(schema);
 				equal(transObj.name, "Homer", "Successfully translated Object schema.");
 				equal(transObj.type, "character", "Successfully translated Object schema.");
 
